--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ chaostoolkit>=1.14.0
 chaostoolkit-kubernetes>=0.28.0
 
 # Testing
-pytest>=7.4.0
+pytest>=9,<10
 pytest-asyncio>=0.21.1
 pytest-cov>=4.1.0
 pytest-timeout>=2.1.0
