--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -9,4 +9,5 @@ iniconfig==2.3.0
 packaging==26.0
 pluggy==1.6.0
 Pygments==2.19.2
-pytest==9.0.2
+pytest==9.0.2; python_version >= '3.10'
+pytest==8.4.2; python_version < '3.10'
