--- a/requirements.txt
+++ b/requirements.txt
@@ -35,5 +35,5 @@ loguru>=0.7.0
 python-dotenv>=1.0.0
 
 # Network simulation
-netifaces>=0.11.0
-psutil>=5.9.5
+netifaces>=0.11.0; python_version < '3.14'
+psutil>=5.9.5; python_version < '3.14'
