Fix pytest.ini test discovery

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,14 @@
 [pytest]
-testpaths = tests
+testpaths = .
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+norecursedirs =
+    .git
+    .venv
+    .venv_sanity
+    __pycache__
 
 # Async support
 asyncio_mode = auto
