--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m pytest -q --junitxml=reports/junit.xml --cov=. --cov-report=xml:reports/coverage.xml --cov-report=html:reports/htmlcov --cov-report=term-missing
+          python -m pytest -q --junitxml=reports/junit.xml --cov=. --cov-report=xml:reports/coverage.xml --cov-report=term-missing
 
       - name: Upload test reports (JUnit + coverage)
         if: always()
@@ -74,7 +74,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m pytest -q --junitxml=reports/junit.xml --cov=. --cov-report=xml:reports/coverage.xml --cov-report=html:reports/htmlcov --cov-report=term-missing
+          python -m pytest -q --junitxml=reports/junit.xml --cov=. --cov-report=xml:reports/coverage.xml --cov-report=term-missing
 
       - name: Upload test reports (JUnit + coverage)
         if: always()
